# yuuko

./: README.md  com.yuuko.alert.json  meson.build
data/: com.yuuko.alert.desktop.in  com.yuuko.alert.gschema.xml  com.yuuko.alert.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  yuuko-application.c  yuuko-application.h  yuuko-window.c  yuuko-window.h  yuuko-window.ui  yuuko.gresource.xml
